# nn-zero-to-hero

./: .gitignore  README.md  build_makemore_yay.ipynb  micrograd_from_scratch.ipynb  pyproject.toml
